[gd_scene load_steps=31 format=3 uid="uid://8militokl5i2"]

[ext_resource type="Script" path="res://Deck.gd" id="1_makox"]
[ext_resource type="Texture2D" uid="uid://bfpasjan3boqq" path="res://CardGameResources/Assets/Images/CardBack.png" id="2_b6e8m"]
[ext_resource type="Script" path="res://card_manager.gd" id="3_kg26c"]
[ext_resource type="FontFile" uid="uid://xcke3ars76xs" path="res://CardGameResources/Assets/Fonts/CooperBits.ttf" id="3_yxs1m"]
[ext_resource type="Script" path="res://CardBattleGameManager.gd" id="4_np54o"]
[ext_resource type="Texture2D" uid="uid://dh6fmhyvxt70x" path="res://CardGameResources/Assets/Images/ShieldIcon.png" id="8_tmajm"]
[ext_resource type="Script" path="res://InputManager.gd" id="8_vavm0"]
[ext_resource type="Script" path="res://EnemyHand.gd" id="8_vsv3w"]
[ext_resource type="Texture2D" uid="uid://b7e0oqpgm8i84" path="res://CardGameResources/Assets/Images/ClubsArmorIcon.png" id="9_0hkus"]
[ext_resource type="Script" path="res://PlayerHand.gd" id="9_5cl68"]
[ext_resource type="Texture2D" uid="uid://l3ibsxj1m3yn" path="res://CardGameResources/Assets/Images/CardTableBackground2.png" id="9_r0hem"]
[ext_resource type="Texture2D" uid="uid://8n0o5o6knknq" path="res://CardGameResources/Assets/Images/AttackIcon.png" id="10_u46c6"]
[ext_resource type="Texture2D" uid="uid://dvqtlibym4vf" path="res://CardGameResources/Assets/Images/ClubsAttackIcon.png" id="10_whn5y"]
[ext_resource type="Texture2D" uid="uid://cad1kl30bsq7q" path="res://CardGameResources/Assets/Images/DefendIcon.png" id="11_yet4x"]
[ext_resource type="PackedScene" uid="uid://cpduspx8j5mic" path="res://Scenes/ShakeText.tscn" id="13_fbc27"]
[ext_resource type="Texture2D" uid="uid://ctxiluob0qed3" path="res://CardGameResources/Assets/Images/LifeIconFull.png" id="14_ic4a8"]
[ext_resource type="Texture2D" uid="uid://bskbnsehy4t0n" path="res://CardGameResources/Assets/Images/LifeIconBackdrop.png" id="15_edmek"]
[ext_resource type="Texture2D" uid="uid://3kfmgv3ibn3m" path="res://CardGameResources/Assets/Images/ButtonSpriteTemp.png" id="16_ays75"]

[sub_resource type="Animation" id="Animation_xh832"]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AttackIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 256), Vector2(1248, 506), Vector2(960, 756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DefendIcon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 756), Vector2(600, 506), Vector2(960, 256)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../EnemyHP:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../EnemyHP:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1471, 300)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Round3Text:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(396, 583)]
}

[sub_resource type="Animation" id="Animation_egcvy"]
resource_name = "enemy_take_damage"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../EnemyHP:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.932603, 0.202066, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../EnemyHP:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.06, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1471, 300), Vector2(1491, 300), Vector2(1451, 300), Vector2(1471, 300)]
}

[sub_resource type="Animation" id="Animation_ds8xb"]
resource_name = "icon_top_to_bottom"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AttackIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 256), Vector2(1250, 506), Vector2(960, 756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DefendIcon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 756), Vector2(670, 506), Vector2(960, 256)]
}

[sub_resource type="Animation" id="Animation_r14xn"]
resource_name = "player_defense_icons"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DefendIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 256), Vector2(1250, 506), Vector2(960, 756)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AttackIcon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(960, 756), Vector2(670, 506), Vector2(960, 256)]
}

[sub_resource type="Animation" id="Animation_h3n7g"]
resource_name = "shake_text"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Round3Text:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(396, 583), Vector2(396, 600), Vector2(396, 583)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rybwy"]
_data = {
"RESET": SubResource("Animation_xh832"),
"enemy_take_damage": SubResource("Animation_egcvy"),
"player_attack_icons": SubResource("Animation_ds8xb"),
"player_defense_icons": SubResource("Animation_r14xn"),
"shake_text": SubResource("Animation_h3n7g")
}

[sub_resource type="Animation" id="Animation_ybo7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(591, 450)]
}

[sub_resource type="Animation" id="Animation_0prwe"]
resource_name = "shake_text"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(591, 450), Vector2(591, 467), Vector2(591, 450)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_234on"]
_data = {
"RESET": SubResource("Animation_ybo7n"),
"shake_text": SubResource("Animation_0prwe")
}

[sub_resource type="Animation" id="Animation_q58id"]
resource_name = "heart_shake"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1679, 727), Vector2(1670, 727), Vector2(1688, 727), Vector2(1679, 727)]
}

[sub_resource type="Animation" id="Animation_0qunx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1679, 727)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nue8f"]
_data = {
"RESET": SubResource("Animation_0qunx"),
"heart_shake": SubResource("Animation_q58id")
}

[node name="Main" type="Node2D"]
position = Vector2(0, -8)

[node name="Deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(240, 540)
script = ExtResource("1_makox")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
texture = ExtResource("2_b6e8m")

[node name="Sprite2D2" type="Sprite2D" parent="Deck"]
z_index = -3
position = Vector2(0, 2.5)
texture = ExtResource("2_b6e8m")

[node name="Sprite2D3" type="Sprite2D" parent="Deck"]
z_index = -4
position = Vector2(0, 5)
texture = ExtResource("2_b6e8m")

[node name="Sprite2D4" type="Sprite2D" parent="Deck"]
z_index = -5
position = Vector2(0, 8)
texture = ExtResource("2_b6e8m")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
offset_left = -63.0
offset_top = 80.0
offset_right = 63.0
offset_bottom = 176.0
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 96
bbcode_enabled = true
text = "[center]44[/center]"
fit_content = true

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("9_5cl68")

[node name="EnemyHand" type="Node2D" parent="."]
position = Vector2(-3, 4)
script = ExtResource("8_vsv3w")

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("3_kg26c")

[node name="CardGameManager" type="Node" parent="."]
script = ExtResource("4_np54o")

[node name="PlayCardText" type="RichTextLabel" parent="CardGameManager"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]Play a card for Attack![/center]"
fit_content = true

[node name="PlayerHP" type="RichTextLabel" parent="CardGameManager"]
offset_left = 1608.0
offset_top = 603.0
offset_right = 1656.0
offset_bottom = 643.0
scale = Vector2(3, 3)
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
bbcode_enabled = true
text = "[center]50"

[node name="PlayerShield" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = 360.0
offset_right = 732.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="EnemyHP" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = -1
anchor_left = 0.821
anchor_top = 0.167
anchor_right = 0.934
anchor_bottom = 0.278
offset_left = -105.32
offset_top = 119.64
offset_right = -250.28
offset_bottom = 39.76
scale = Vector2(3, 3)
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
bbcode_enabled = true
text = "[center]50"

[node name="PlayerArmor" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 596.0
offset_top = 360.0
offset_right = 848.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="PlayerAttack" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 712.0
offset_top = 360.0
offset_right = 964.0
offset_bottom = 468.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="EnemyShield" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = -70.0
offset_right = 732.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="EnemyArmor" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 596.0
offset_top = -70.0
offset_right = 848.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="EnemyAttack" type="RichTextLabel" parent="CardGameManager"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 712.0
offset_top = -70.0
offset_right = 964.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]0[/center]"

[node name="PlayerShieldIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1564, 850)
scale = Vector2(2, 2)
texture = ExtResource("8_tmajm")

[node name="PlayerShieldIcon2" type="Sprite2D" parent="CardGameManager/PlayerShieldIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="PlayerArmorIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1680, 850)
scale = Vector2(2, 2)
texture = ExtResource("9_0hkus")

[node name="PlayerShieldIcon3" type="Sprite2D" parent="CardGameManager/PlayerArmorIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="PlayerAttackIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1796, 850)
scale = Vector2(2, 2)
texture = ExtResource("10_whn5y")

[node name="PlayerShieldIcon3" type="Sprite2D" parent="CardGameManager/PlayerAttackIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="EnemyShieldIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1564, 420)
scale = Vector2(2, 2)
texture = ExtResource("8_tmajm")

[node name="EnemyShieldIcon2" type="Sprite2D" parent="CardGameManager/EnemyShieldIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="EnemyArmorIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1680, 420)
scale = Vector2(2, 2)
texture = ExtResource("9_0hkus")

[node name="EnemyShieldIcon3" type="Sprite2D" parent="CardGameManager/EnemyArmorIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="EnemyAttackIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(1796, 420)
scale = Vector2(2, 2)
texture = ExtResource("10_whn5y")

[node name="EnemyShieldIcon3" type="Sprite2D" parent="CardGameManager/EnemyAttackIcon"]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("8_tmajm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardGameManager"]
root_node = NodePath("../TurnIcons")
libraries = {
"": SubResource("AnimationLibrary_rybwy")
}

[node name="AttackIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(960, 256)
scale = Vector2(2, 2)
texture = ExtResource("10_u46c6")

[node name="DefendIcon" type="Sprite2D" parent="CardGameManager"]
position = Vector2(960, 756)
scale = Vector2(2, 2)
texture = ExtResource("11_yet4x")

[node name="TurnIcons" type="Node" parent="CardGameManager"]

[node name="RoundLabel" type="RichTextLabel" parent="CardGameManager"]
offset_left = 591.0
offset_top = 450.0
offset_right = 1361.0
offset_bottom = 798.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 82
bbcode_enabled = true
text = "[center]Round I[/center]"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardGameManager/RoundLabel"]
libraries = {
"": SubResource("AnimationLibrary_234on")
}

[node name="GameOverLabel" type="RichTextLabel" parent="CardGameManager"]
modulate = Color(1, 1, 1, 0)
offset_left = 591.0
offset_top = 450.0
offset_right = 1361.0
offset_bottom = 798.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 82
bbcode_enabled = true
text = "[center]It's a draw.[/center]"

[node name="Round3Text" type="RichTextLabel" parent="CardGameManager"]
modulate = Color(0.92549, 0, 0.00392157, 0)
offset_left = 396.0
offset_top = 583.0
offset_right = 1524.0
offset_bottom = 744.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_outline_size = 20
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]Attack Values Doubled![/center]"

[node name="AnimationPlayer" parent="CardGameManager/Round3Text" instance=ExtResource("13_fbc27")]

[node name="PlayerLifeIcon" type="Sprite2D" parent="CardGameManager"]
z_index = -1
position = Vector2(1679, 727)
scale = Vector2(5, 5)
texture = ExtResource("14_ic4a8")

[node name="PlayerLifeShield" type="Sprite2D" parent="CardGameManager/PlayerLifeIcon"]
modulate = Color(0.301961, 0.807843, 0.92549, 0)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("15_edmek")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CardGameManager/PlayerLifeIcon"]
libraries = {
"": SubResource("AnimationLibrary_nue8f")
}

[node name="EnemyLifeIcon" type="Sprite2D" parent="CardGameManager"]
z_index = -1
position = Vector2(1679, 300)
scale = Vector2(5, 5)
texture = ExtResource("14_ic4a8")

[node name="EnemyLifeShield" type="Sprite2D" parent="CardGameManager/EnemyLifeIcon"]
modulate = Color(0.301961, 0.807843, 0.92549, 0)
z_index = -1
scale = Vector2(1.1, 1.1)
texture = ExtResource("15_edmek")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("8_vavm0")

[node name="Backdrop" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(963, 539)
texture = ExtResource("9_r0hem")

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="ReplayButton" type="TextureButton" parent="."]
z_index = 10
offset_left = 703.0
offset_top = 562.0
offset_right = 959.0
offset_bottom = 658.0
scale = Vector2(2, 2)
texture_normal = ExtResource("16_ays75")

[node name="RichTextLabel" type="RichTextLabel" parent="ReplayButton"]
layout_mode = 0
offset_top = 29.0
offset_right = 338.0
offset_bottom = 115.0
scale = Vector2(0.75, 0.75)
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "[center]Replay"

[node name="ExitButton" type="TextureButton" parent="."]
z_index = 10
offset_left = 703.0
offset_top = 800.0
offset_right = 959.0
offset_bottom = 896.0
scale = Vector2(2, 2)
texture_normal = ExtResource("16_ays75")

[node name="RichTextLabel" type="RichTextLabel" parent="ExitButton"]
layout_mode = 0
offset_top = 29.0
offset_right = 338.0
offset_bottom = 115.0
scale = Vector2(0.75, 0.75)
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/normal_font = ExtResource("3_yxs1m")
theme_override_font_sizes/normal_font_size = 56
bbcode_enabled = true
text = "[center]Exit"

[connection signal="pressed" from="ReplayButton" to="CardGameManager" method="_on_replay_button_pressed"]
[connection signal="pressed" from="ExitButton" to="CardGameManager" method="_on_exit_button_pressed"]
